############### LIB ########################################################
find_package(Threads REQUIRED)
add_library(${CMAKE_PROJECT_NAME} INTERFACE)
target_include_directories(${CMAKE_PROJECT_NAME} INTERFACE ../include)
target_compile_features(${CMAKE_PROJECT_NAME} INTERFACE  cxx_std_20)
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    message("--Debug Build")
    target_compile_options(${CMAKE_PROJECT_NAME} INTERFACE -fprofile-arcs -ftest-coverage -O0)
    target_link_libraries(${CMAKE_PROJECT_NAME}  INTERFACE Threads::Threads gcov)
else ()
	target_link_libraries(${CMAKE_PROJECT_NAME} INTERFACE Threads::Threads)
endif()

add_executable(backtest_sample channel_sample.cpp)
target_link_libraries(backtest_sample ${CMAKE_PROJECT_NAME})
